erDiagram
    direction TB
    Setting {
        string key PK
        json value
    }
    Geometry {
        string key PK
        json shape
    }
    Feature {
        string key PK
        string object_type
        string name
        string short
        string kind
        string confidence
        number rank
        string period
        string note
        string geometry_id FK
        json metadata
    }
    Geometry |o--o{ Feature : "geometry_id"
    Style {
        string key PK
        json value
    }
    Component {
        string key PK
        string feature_id FK
        string geometry_id FK
        string style_id FK
        number z
        json recipe
    }
    Feature |o--o{ Component : "feature_id"
    Geometry |o--o{ Component : "geometry_id"
    Style ||--o{ Component : "style_id"
    Label {
        string key PK
        string feature_id FK
        string text
        number dx
        number dy
        json spec
    }
    Feature |o--o{ Label : "feature_id"
    Source {
        string key PK
        string title
        string kind
        string url
        string role
        json metadata
    }
    Evidence {
        string key PK
        string feature_id FK
        string source_id FK
        string reference
        string note
        number order
    }
    Feature ||--o{ Evidence : "feature_id"
    Source ||--o{ Evidence : "source_id"
    MapView {
        string key PK
        string title
        string subtitle
        number scale
        json bounds
    }
    Revision {
        number id PK
        datetime created
        string author
        string reason
        json before
        json after
        string digest
    }
    MapState {
        number id PK
        boolean initialized
        string revision_id FK
    }
    Revision |o--o| MapState : "revision_id"
    Character {
        string slug PK
        string name
    }
    Tag {
        string slug PK
    }
    Photo {
        number id PK
        string sha256
        string ext
        string original_name
        string caption
        string caption_ru
        number year
        string feature_key
        number order
        number width
        number height
        datetime created
    }
    Photo_characters {
        number id PK
        string photo_id FK
        string character_id FK
    }
    Photo ||--o{ Photo_characters : "photo_id"
    Character ||--o{ Photo_characters : "character_id"
    Photo_tags {
        number id PK
        string photo_id FK
        string tag_id FK
    }
    Photo ||--o{ Photo_tags : "photo_id"
    Tag ||--o{ Photo_tags : "tag_id"
    PlaceCover {
        number id PK
        string sha256
        string ext
        string original_name
        string feature_key
        number year
        string alt
        string alt_ru
        number width
        number height
        datetime created
    }
